# CamTrace

./: .env.example  .gitignore  .pre-commit-config.yaml  .ruff.toml  README.md  allowlist.yaml  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.in  requirements.txt  test_email.py
.github/workflows/: ci.yml
agent/: placeholder_agent.py
app/: __init__.py  allowlist.py  config.py  emailer.py  enrich.py  main.py  metrics.py  models.py  reporting.py  schemas.py
app/routers/: admin.py  ingest.py
examples/: enrich_demo.py  flows.jsonl
grafana/: dashboard.json
src/camtrace/: __main__.py  alert_email.py  app.py  capture_cli.py  cli.py  delete_this.py  enrich_adapter.py  ip_enricher.py  report_job.py  reporting.py  scheduler.py  serve.py
tests/: conftest.py  test_email.py  test_enricher.py  test_report.py  test_smoke.py
